// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AvatarRow component matches snapshot with count 1`] = `
<div
  className="updatable"
>
  <div>
    I can be updated with an update indicator.
  </div>
  <div
    className="updatable-indicator"
  >
    <Indicator
      label="666"
      type="update"
    />
  </div>
</div>
`;

exports[`AvatarRow component matches snapshot with element in message 1`] = `
<div
  className="updatable"
>
  <div>
    I can be updated with an update indicator.
  </div>
  <div
    className="updatable-indicator"
  >
    <Indicator
      label={
        <span>
          <WorkFasterIcon
            color="#ffffff"
            size="xs"
          />
           lightning bolt for some reason
        </span>
      }
      type="update"
    />
  </div>
</div>
`;

exports[`AvatarRow component matches snapshot with undefined message 1`] = `
<div
  className="updatable"
>
  <div>
    I can be updated with an update indicator.
  </div>
</div>
`;

exports[`AvatarRow component matches snapshot with undefined message AND showDot 1`] = `
<div
  className="updatable"
>
  <div>
    I can be updated with an update indicator.
  </div>
  <div
    className="updatable-indicator"
  >
    <Indicator
      type="update"
    />
  </div>
</div>
`;
